--- a/MyUserAPP/app/src/main/res/values/strings.xml
+++ b/MyUserAPP/app/src/main/res/values/strings.xml
@@ -21,4 +21,5 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="IMEI">IMEI</string>
     <string name="title_registration">Registration</string>
+    <string name="action_cart">Cart</string>
 </resources>
